styles/app/tasker_app.module.scss
.container {
    height: 100vh;
    width: 100vw;
    position: relative;
    transition: background 0.3s;

    .tabs {
        height: 50px;
        z-index: 999999;
    }


    .settingsWrap {
        position: fixed;
        bottom: .5em;
        left: .5em;
        cursor: pointer;
        z-index: 100;
        filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 1));
        width: 30px;
        height: 30px;
    }

    .hideSettingsPanel {
        position: fixed;
        bottom: 40px;
        left: 30px;
        opacity: 0%;
        pointer-events: none;
        transition: opacity 0.2s ease-out;
        z-index: 500;
    }
    

    .settingsPanelWrapper {
        position: fixed;
        bottom: 40px;
        left: 30px;
        z-index: 100;
        opacity: 95%;
        transition: opacity 0.2s ease-out;
        z-index: 500;
    }

    .newCardWrap {
        position: fixed;
        bottom: .5em;
        right: 1em;
        cursor: pointer;
        z-index: 100;
        filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 1));

    }

    .cardContainer {
            margin-top: 2.5vw;
            display: flex;
            justify-content: center;
        .cards {
            // column-count: 2;
            column-gap: .8em;
            width: 95vw;
        }
        .card {
            display: inline-block;
            width: 100%;
            margin-bottom: .8em;
        }
    }
}

.bkgContainer {
    position: fixed;
    min-height: 100%;
    width: 100%;
}

.darkMode {
    background: #284941;
    transition: 0.3s;
    filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 1));

}

@media screen and (min-width: 769px){
    .container {

        .tabs {
            height: 60px;
        }

        .settingsWrap {
            bottom: 1em;
            left: 0.8em;
            height: 50px;
            width: 50px;
            filter: brightness(0) saturate(100%) invert(88%) sepia(23%) saturate(235%) hue-rotate(109deg) brightness(106%) contrast(98%);
        }

        .cardContainer {
            margin-left: 80px;
            .cards {
                width: Calc(95vw - 80px);
            }
        }

    }

    .darkMode {

    }
}

